# Doom-Eternal-Model-Importer

./: .gitignore  CMakeLists.txt  README.md
source/core/: ModelConverter.cpp  ModelConverter.h  Oodle.cpp  Oodle.h  ResourceFileReader.cpp  ResourceFileReader.h  Utilities.cpp  Utilities.h
source/core/types/: LWO.cpp  LWO.h  OBJ.cpp  OBJ.h  ResourceFile.cpp  ResourceFile.h
source/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resourceform.cpp  resourceform.h  resourceform.ui
